<resources>
    <string name="app_name">Exercise 1</string>
    <string name="rizal_monument">Intramuros</string>
    <string name="information">INFORMATION</string>
    <string name="description">Intramuros also known as the "Walled City", is famous for its well-preserved Spanish colonial architecture, historical landmarks, and cultural heritage.</string>
    <string name="where">WHERE</string>
    <string name="manila">Manila</string>
    <string name="established">ESTABLISHED</string>
    <string name="year">1571</string>
    <string name="type">TYPE</string>
    <string name="historical_monument">Historical Monument</string>
    <string name="img_description">this image shows the Jose Rizal Monument</string>

</resources>